Fix heading gaps

--- a/src/style/_component.header.scss
+++ b/src/style/_component.header.scss
@@ -1,5 +1,5 @@
 .header {
   h1 {
-    padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
   }
 }
