--- a/src/style/_elements.headings.scss
+++ b/src/style/_elements.headings.scss
@@ -14,7 +14,7 @@ h2 {
 h3 {
   font-size: 1.2em;
   font-weight: 700;
-  margin-top: max(3rem,10vh);
+  margin-top: 2rem;
 }
 
 h4 {
